--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
       <div class="owl-carousel" id="key_action_slider">
         <div class="col-md-12 pl-0 pr-0">
           <div class="row mt-3">
-            <div class="col-md-2"> <img src="images/key-icon-01.webp " alt="001 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
+            <div class="col-md-2 pb-2"> <img src="images/key-icon-01.webp " alt="001 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
             <div class="col-md-10">
               <p class="key_heading_css">Activate hair follicles</p>
               <p> Exosomes stimulate the activation and proliferation of hair follicles, leading to the initiation of the Anagen (growth) phase of the hair cycle </p>
@@ -303,7 +303,7 @@
         </div>
         <div class="col-md-12 pl-0 pr-0">
           <div class="row">
-            <div class="col-md-2"> <img src="images/key-icon-02.webp " alt="002 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
+            <div class="col-md-2 pb-2"> <img src="images/key-icon-02.webp " alt="002 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
             <div class="col-md-10">
               <p class="key_heading_css">Delivers 1,470 growth factors & molecules</p>
               <p> Exosomes contain various proteins, growth factors, and microRNAs that can influence cellular processes related to hair growth, such as cell proliferation, differentiation and survival </p>
@@ -312,7 +312,7 @@
         </div>
         <div class="col-md-12 pl-0 pr-0">
           <div class="row">
-            <div class="col-md-2"> <img src="images/key-icon-03.webp " alt="003 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
+            <div class="col-md-2 pb-2"> <img src="images/key-icon-03.webp " alt="003 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
             <div class="col-md-10">
               <p class="key_heading_css">Creates balanced scalp environment</p>
               <p> Exosomes help regulate the scalp's immune response, reducing inflammation and creating a more favourable environment for hair growth </p>
@@ -321,7 +321,7 @@
         </div>
         <div class="col-md-12 pl-0 pr-0">
           <div class="row">
-            <div class="col-md-2"> <img src="images/key-icon-04.webp " alt="004 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
+            <div class="col-md-2 pb-2"> <img src="images/key-icon-04.webp " alt="004 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
             <div class="col-md-10">
               <p class="key_heading_css">Enhances nutrients delivery</p>
               <p> Exosomes help formation of new blood vessels in the scalp, which increases blood flow and delivers vital nutrients to the hair follicle which supports healthy hair growth </p>
@@ -348,14 +348,14 @@
         </div>
         <div class="col-md-4">
           <div class="box_benefits_col box_bene_col_activate"> <img src="images/benofits-icon-02.webp" alt="02 benefit icon" class="img-fluid" width="75" height="75" loading="lazy">
-            <p class="benifits_heading_css">Exosome-based formulation</p>
-            <p> Exosomes in hair treatments offer targeted benefits including promoting hair growth, reducing inflammation, and improving overall scalp health </p>
+            <p class="benifits_heading_css">Targeted approach</p>
+            <p> Exosomes deliver hair-growth factors directly to your hair follicles, for targeted rejuvenation </p>
           </div>
         </div>
         <div class="col-md-4">
           <div class="box_benefits_col box_bene_col_non_activate"> <img src="images/benofits-icon-03.webp" alt="03 benefit icon" class="img-fluid" width="75" height="75" loading="lazy">
-            <p class="benifits_heading_css">Exosome-based formulation</p>
-            <p> Exosomes in hair treatments offer targeted benefits including promoting hair growth, reducing inflammation, and improving overall scalp health </p>
+            <p class="benifits_heading_css">Treats hereditary hair loss</p>
+            <p>Exosome treatment provides visible improvements even in cases of hereditary hair loss that cannot be treated by traditional hair treatments </p>
           </div>
         </div>
       </div>
@@ -368,14 +368,14 @@
         </div>
         <div class="col-md-12 pl-0 pr-0">
           <div class="box_benefits_col box_bene_col_activate"> <img src="images/benofits-icon-02.webp" alt="02 benefit icon" class="img-fluid" width="75" height="75" loading="lazy">
-            <p class="benifits_heading_css">Exosome-based formulation</p>
-            <p> Exosomes in hair treatments offer targeted benefits including promoting hair growth, reducing inflammation, and improving overall scalp health </p>
+            <p class="benifits_heading_css">Targeted approach</p>
+            <p> Exosomes deliver hair-growth factors directly to your hair follicles, for targeted rejuvenation </p>
           </div>
         </div>
         <div class="col-md-12 pl-0 pr-0">
           <div class="box_benefits_col box_bene_col_activate"> <img src="images/benofits-icon-03.webp" alt="03 benefit icon" class="img-fluid" width="75" height="75" loading="lazy">
-            <p class="benifits_heading_css">Exosome-based formulation</p>
-            <p> Exosomes in hair treatments offer targeted benefits including promoting hair growth, reducing inflammation, and improving overall scalp health </p>
+            <p class="benifits_heading_css">Treats hereditary hair loss</p>
+            <p> Exosome treatment provides visible improvements even in cases of hereditary hair loss that cannot be treated by traditional hair treatments </p>
           </div>
         </div>
       </div>
