--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
       <div class="row align-items-center">
         <div class="col-md-5"> <img src="images/xogen-before-after.webp" alt="Xogen Before After" class="img-fluid xogen_model_cls" width="445" height="566" loading="lazy"> </div>
         <div class="col-md-7 text-left xogen_blue_patch_content">
-          <h2 class="main-all-heading text-left">What is <br class="d-block d-md-none"> Dr Batra’s® XOGEN <br class="d-block d-md-none">hair treatment?</h2> <img src="images/xogen-logo.webp" alt="Xogen Before After" class="img-fluid" width="229" height="96" loading="lazy">
+          <h2 class="main-all-heading text-left">What is <br class="d-block d-md-none"> Dr Batra’s® XOGEN <br>hair treatment?</h2> <img src="images/xogen-logo.webp" alt="Xogen Before After" class="img-fluid" width="229" height="96" loading="lazy">
           <p class="xogen-para"> XOGEN is a hair growth treatment that delivers exosomes directly into the scalp. These exosomes are attracted to damaged hair follicles and are absorbed. Once inside, they release 1,470 growth factors, proteins, biotin, coenzymes and other beneficial molecules present inside exosomes. </p>
           <p> These molecules work together to speed up regeneration process, promoting thicker, healthier hair growth. This targeted approach makes XOGEN a potentially powerful solution for hair regrowth which can even treat hereditary hair loss. </p>
           <ul class="xogen-list-para">
@@ -251,7 +251,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <h2 class="main-all-heading mb-4"><u>K</u>ey actions of Dr Batra’s® XOGEN treatment </h2> </div>
+          <h2 class="main-all-heading mb-4"><u>K</u>ey actions of <br class="d-block d-md-none">Dr Batra’s® XOGEN <br class="d-block d-md-none">treatment </h2> </div>
       </div>
       <div class="row key_action_slider_dekstop">
         <div class="col-md-6">
