--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       </div>
     </div>
   </section>
-  <section class="mt-4">
+ <!--  <section class="mt-4">
     <div class="container">
       <div class="row">
         <div class="col-12">
@@ -230,18 +230,20 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <section class="blue-patch-bg mt-5">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-5"> <img src="images/xogen-before-after.webp" alt="Xogen Before After" class="img-fluid xogen_model_cls" width="445" height="566" loading="lazy"> </div>
         <div class="col-md-7 text-left xogen_blue_patch_content">
-          <h2 class="main-all-heading text-left">What is <br class="d-block d-md-none"> Dr Batra’s® XOGEN <br>hair treatment?</h2> <img src="images/xogen-logo.webp" alt="Xogen Before After" class="img-fluid" width="229" height="96" loading="lazy">
-          <p class="xogen-para"> XOGEN is a hair growth treatment that delivers exosomes directly into the scalp. These exosomes are attracted to damaged hair follicles and are absorbed. Once inside, they release 1,470 growth factors, proteins, biotin, coenzymes and other beneficial molecules present inside exosomes. </p>
-          <p> These molecules work together to speed up regeneration process, promoting thicker, healthier hair growth. This targeted approach makes XOGEN a potentially powerful solution for hair regrowth which can even treat hereditary hair loss. </p>
+          <h2 class="main-all-heading text-left">What is <br class="d-block d-md-none"> Dr Batra’s® XOGEN <br>hair treatment?</h2> 
+          <img src="images/xogen-logo.webp" alt="Xogen Before After" class="img-fluid pt-2 pb-1" width="229" height="96" loading="lazy">
           <ul class="xogen-list-para">
-            <li><img src="images/checklist-xogen.webp" alt="Xogen Chekclist" class="img-fluid" width="30" height="32" loading="lazy"> Visible results in 3 months</li>
-            <li><img src="images/checklist-xogen.webp" alt="Xogen Chekclist" class="img-fluid" width="30" height="32" loading="lazy"> Treats all types of hair loss</li>
+            <li><img src="images/checklist-xogen.webp" alt="Xogen Chekclist" class="img-fluid" width="30" height="32" loading="lazy"> XOGEN is world’s most advanced exosome-based hair growth treatment </li>
+            <li><img src="images/checklist-xogen.webp" alt="Xogen Chekclist" class="img-fluid" width="30" height="32" loading="lazy"> Treats all kinds of hair loss, from hormonal to hereditary </li>
+            <li><img src="images/checklist-xogen.webp" alt="Xogen Chekclist" class="img-fluid" width="30" height="32" loading="lazy"> Exosome formulations target damaged hair follicles directly </li>
+            <li><img src="images/checklist-xogen.webp" alt="Xogen Chekclist" class="img-fluid" width="30" height="32" loading="lazy"> Promotes blood flow and nutrient supply to hair follicles </li>
+
           </ul>
         </div>
       </div>
@@ -251,80 +253,80 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <h2 class="main-all-heading mb-4"><u>K</u>ey actions of <br class="d-block d-md-none">Dr Batra’s® XOGEN <br class="d-block d-md-none">treatment </h2> </div>
+          <h2 class="main-all-heading mb-4"><u>W</u>hy choose <br class="d-block d-md-none">Dr Batra’s® XOGEN <br class="d-block d-md-none">treatment? </h2> </div>
       </div>
       <div class="row key_action_slider_dekstop">
-        <div class="col-md-6">
-          <div class="row mt-3">
+        <div class="col-md-6 pt-4">
+          <div class="row align-items-center">
             <div class="col-md-2 col-3"> <img src="images/key-icon-01.webp " alt="01 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
             <div class="col-md-10 col-9">
-              <p class="key_heading_css">Activate hair follicles</p>
-              <p> Exosomes stimulate the activation and proliferation of hair follicles, leading to the initiation of the Anagen (growth) phase of the hair cycle </p>
+              <p class="key_heading_css">Accelerates hair growth</p>
+              <!-- <p> Stimulate hair follicles for natural <br>hair regrowth </p> -->
             </div>
           </div>
         </div>
-        <div class="col-md-6">
-          <div class="row">
+        <div class="col-md-6 pt-4">
+          <div class="row align-items-center">
             <div class="col-md-2 col-3"> <img src="images/key-icon-02.webp " alt="02 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
             <div class="col-md-10 col-9">
-              <p class="key_heading_css">Delivers 1,470 growth factors & molecules</p>
-              <p> Exosomes contain various proteins, growth factors, and microRNAs that can influence cellular processes related to hair growth, such as cell proliferation, differentiation and survival </p>
+              <p class="key_heading_css">Nourishes & revitalizes hair</p>
+              <!-- <p> Exosomes deliver growth factors and nutrients directly to hair follicles to nourish and revitalize them </p> -->
             </div>
           </div>
         </div>
-        <div class="col-md-6">
-          <div class="row">
+        <div class="col-md-6 pt-4">
+          <div class="row align-items-center">
             <div class="col-md-2 col-3"> <img src="images/key-icon-03.webp " alt="03 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
             <div class="col-md-10 col-9">
-              <p class="key_heading_css">Creates balanced scalp environment</p>
-              <p> Exosomes help regulate the scalp's immune response, reducing inflammation and creating a more favourable environment for hair growth </p>
+              <p class="key_heading_css">Balances & soothes the scalp</p>
+              <!-- <p>Regulates the scalp environment for optimal hair growth by reducing inflammation </p> -->
             </div>
           </div>
         </div>
-        <div class="col-md-6">
-          <div class="row">
+        <div class="col-md-6 pt-4">
+          <div class="row align-items-center">
             <div class="col-md-2 col-3"> <img src="images/key-icon-04.webp " alt="04 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
             <div class="col-md-10 col-9">
-              <p class="key_heading_css">Enhances nutrients delivery</p>
-              <p> Exosomes help formation of new blood vessels in the scalp, which increases blood flow and delivers vital nutrients to the hair follicle which supports healthy hair growth </p>
+              <p class="key_heading_css">Enhances blood flow</p>
+              <!-- <p> Initiates new blood vessel formation to enhance blood flow to the scalp for healthier hair</p> -->
             </div>
           </div>
         </div>
       </div>
       <div class="owl-carousel" id="key_action_slider">
         <div class="col-md-12 pl-0 pr-0">
-          <div class="row mt-3">
-            <div class="col-md-2 pb-2"> <img src="images/key-icon-01.webp " alt="001 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
-            <div class="col-md-10">
-              <p class="key_heading_css">Activate hair follicles</p>
-              <p> Exosomes stimulate the activation and proliferation of hair follicles, leading to the initiation of the Anagen (growth) phase of the hair cycle </p>
+          <div class="row align-items-center">
+            <div class="col-3 pb-2"> <img src="images/key-icon-01.webp " alt="001 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
+            <div class="col-9 pl-0">
+              <p class="key_heading_css">Accelerates hair growth</p>
+              <!-- <p> Exosomes stimulate the activation and proliferation of hair follicles, leading to the initiation of the Anagen (growth) phase of the hair cycle </p> -->
             </div>
           </div>
         </div>
         <div class="col-md-12 pl-0 pr-0">
-          <div class="row">
-            <div class="col-md-2 pb-2"> <img src="images/key-icon-02.webp " alt="002 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
-            <div class="col-md-10">
-              <p class="key_heading_css">Delivers 1,470 growth factors & molecules</p>
-              <p> Exosomes contain various proteins, growth factors, and microRNAs that can influence cellular processes related to hair growth, such as cell proliferation, differentiation and survival </p>
+          <div class="row align-items-center">
+            <div class="col-3 pb-2"> <img src="images/key-icon-02.webp " alt="002 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
+            <div class="col-9 pl-0">
+              <p class="key_heading_css">Nourishes & revitalizes hair</p>
+              <!-- <p> Exosomes contain various proteins, growth factors, and microRNAs that can influence cellular processes related to hair growth, such as cell proliferation, differentiation and survival </p> -->
             </div>
           </div>
         </div>
         <div class="col-md-12 pl-0 pr-0">
-          <div class="row">
-            <div class="col-md-2 pb-2"> <img src="images/key-icon-03.webp " alt="003 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
-            <div class="col-md-10">
-              <p class="key_heading_css">Creates balanced scalp environment</p>
-              <p> Exosomes help regulate the scalp's immune response, reducing inflammation and creating a more favourable environment for hair growth </p>
+          <div class="row align-items-center">
+            <div class="col-3 pb-2"> <img src="images/key-icon-03.webp " alt="003 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
+            <div class="col-9 pl-0">
+              <p class="key_heading_css">Balances & soothes</p>
+              <!-- <p> Exosomes help regulate the scalp's immune response, reducing inflammation and creating a more favourable environment for hair growth </p> -->
             </div>
           </div>
         </div>
         <div class="col-md-12 pl-0 pr-0">
-          <div class="row">
-            <div class="col-md-2 pb-2"> <img src="images/key-icon-04.webp " alt="004 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
-            <div class="col-md-10">
-              <p class="key_heading_css">Enhances nutrients delivery</p>
-              <p> Exosomes help formation of new blood vessels in the scalp, which increases blood flow and delivers vital nutrients to the hair follicle which supports healthy hair growth </p>
+          <div class="row align-items-center">
+            <div class="col-3 pb-2"> <img src="images/key-icon-04.webp " alt="004 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
+            <div class="col-9 pl-0">
+              <p class="key_heading_css">Enhances blood flow</p>
+              <!-- <p> Exosomes help formation of new blood vessels in the scalp, which increases blood flow and delivers vital nutrients to the hair follicle which supports healthy hair growth </p> -->
             </div>
           </div>
         </div>
