--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
           <h2 class="main-all-heading text-left">What is <br class="d-block d-md-none"> Dr Batra’s® XOGEN <br>hair treatment?</h2> 
           <img src="images/xogen-logo.webp" alt="Xogen Before After" class="img-fluid pt-2 pb-1" width="229" height="96" loading="lazy">
           <ul class="xogen-list-para">
-            <li><img src="images/checklist-xogen.webp" alt="Xogen Chekclist" class="img-fluid" width="30" height="32" loading="lazy"> XOGEN is world’s most advanced exosome-based hair growth treatment </li>
+            <li><img src="images/checklist-xogen.webp" alt="Xogen Chekclist" class="img-fluid" width="30" height="32" loading="lazy"> XOGEN is the world’s most advanced exosome-based hair growth treatment </li>
             <li><img src="images/checklist-xogen.webp" alt="Xogen Chekclist" class="img-fluid" width="30" height="32" loading="lazy"> Treats all kinds of hair loss, from hormonal to hereditary </li>
             <li><img src="images/checklist-xogen.webp" alt="Xogen Chekclist" class="img-fluid" width="30" height="32" loading="lazy"> Exosome formulations target damaged hair follicles directly </li>
             <li><img src="images/checklist-xogen.webp" alt="Xogen Chekclist" class="img-fluid" width="30" height="32" loading="lazy"> Promotes blood flow and nutrient supply to hair follicles </li>
