--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
           <ul class="xogen-list-para">
             <li><img src="images/checklist-xogen.webp" alt="Xogen Chekclist" class="img-fluid" width="30" height="29" loading="lazy"> XOGEN is the world’s most advanced exosome-based hair growth treatment </li>
             <li><img src="images/checklist-xogen.webp" alt="Xogen Chekclist" class="img-fluid" width="30" height="29" loading="lazy"> Treats all kinds of hair loss, from hormonal to hereditary </li>
-            <li><img src="images/checklist-xogen.webp" alt="Xogen Chekclist" class="img-fluid" width="30" height="29" loading="lazy"> Exosome formulations target damaged hair follicles directly </li>
+            <li><img src="images/checklist-xogen.webp" alt="Xogen Chekclist" class="img-fluid" width="30" height="29" loading="lazy"> Exosome formulations targets damaged hair follicles directly </li>
             <li><img src="images/checklist-xogen.webp" alt="Xogen Chekclist" class="img-fluid" width="30" height="29" loading="lazy"> Promotes blood flow and nutrient supply to hair follicles </li>
 
           </ul>
@@ -345,19 +345,19 @@
         <div class="col-md-4">
           <div class="box_benefits_col box_bene_col_non_activate"> <img src="images/benofits-icon-01.webp" alt="01 benefit icon" class="img-fluid" width="75" height="75" loading="lazy">
             <p class="benifits_heading_css">Exosome-based formulation</p>
-            <p> Exosomes in hair treatments offer targeted benefits including promoting hair growth, reducing inflammation, and improving overall scalp health </p>
+            <p> XOGEN offer targeted benefits including promoting hair growth, reducing inflammation, and improving overall scalp health </p>
           </div>
         </div>
         <div class="col-md-4">
           <div class="box_benefits_col box_bene_col_activate"> <img src="images/benofits-icon-02.webp" alt="02 benefit icon" class="img-fluid" width="75" height="75" loading="lazy">
             <p class="benifits_heading_css">Targeted approach</p>
-            <p> Exosomes deliver hair-growth factors directly to your hair follicles, for targeted rejuvenation </p>
+            <p> XOGEN delivers hair-growth factors directly to your hair follicles, for targeted rejuvenation </p>
           </div>
         </div>
         <div class="col-md-4">
           <div class="box_benefits_col box_bene_col_non_activate"> <img src="images/benofits-icon-03.webp" alt="03 benefit icon" class="img-fluid" width="75" height="75" loading="lazy">
             <p class="benifits_heading_css">Treats hereditary hair loss</p>
-            <p>Exosome treatment provides visible improvements even in cases of hereditary hair loss that cannot be treated by traditional hair treatments </p>
+            <p>Get visible improvements even in cases of hereditary hair loss that cannot be treated by traditional hair treatments </p>
           </div>
         </div>
       </div>
@@ -365,19 +365,19 @@
         <div class="col-md-12 pl-0 pr-0">
           <div class="box_benefits_col box_bene_col_activate"> <img src="images/benofits-icon-01.webp" alt="01 benefit icon" class="img-fluid" width="75" height="75" loading="lazy">
             <p class="benifits_heading_css">Exosome-based formulation</p>
-            <p> Exosomes in hair treatments offer targeted benefits including promoting hair growth, reducing inflammation, and improving overall scalp health </p>
+            <p> XOGEN offer targeted benefits including promoting hair growth, reducing inflammation, and improving overall scalp health </p>
           </div>
         </div>
         <div class="col-md-12 pl-0 pr-0">
           <div class="box_benefits_col box_bene_col_activate"> <img src="images/benofits-icon-02.webp" alt="02 benefit icon" class="img-fluid" width="75" height="75" loading="lazy">
             <p class="benifits_heading_css">Targeted approach</p>
-            <p> Exosomes deliver hair-growth factors directly to your hair follicles, for targeted rejuvenation </p>
+            <p> XOGEN delivers hair-growth factors directly to your hair follicles, for targeted rejuvenation </p>
           </div>
         </div>
         <div class="col-md-12 pl-0 pr-0">
           <div class="box_benefits_col box_bene_col_activate"> <img src="images/benofits-icon-03.webp" alt="03 benefit icon" class="img-fluid" width="75" height="75" loading="lazy">
             <p class="benifits_heading_css">Treats hereditary hair loss</p>
-            <p> Exosome treatment provides visible improvements even in cases of hereditary hair loss that cannot be treated by traditional hair treatments </p>
+            <p> Get visible improvements even in cases of hereditary hair loss that cannot be treated by traditional hair treatments </p>
           </div>
         </div>
       </div>
