--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
     autoplayTimeout: 4e3,
     smartSpeed: 400,
     center: !0,
-    navText: ["<img src='images/previmage.webp'>", "<img src='images/nextimage.webp'>"],
+     navText: ["<img src='images/previmage.webp' alt='04 prev'>", "<img src='images/nextimage.webp' alt='04 next'>"],
     responsive: {
       0: {
         items: 1
@@ -683,7 +683,7 @@
     autoplay: !1,
     autoplayTimeout: 4e3,
     smartSpeed: 400,
-    navText: ["<img src='images/previmage.webp'>", "<img src='images/nextimage.webp'>"],
+    navText: ["<img src='images/previmage.webp' alt='03 prev'>", "<img src='images/nextimage.webp' alt='03 next'>"],
     responsive: {
       0: {
         items: 1
@@ -712,7 +712,7 @@
     autoplay: !0,
     autoplayTimeout: 4e3,
     smartSpeed: 400,
-    navText: ["<img src='images/previmage.webp'>", "<img src='images/nextimage.webp'>"],
+    navText: ["<img src='images/previmage.webp' alt='01 prev'>", "<img src='images/nextimage.webp' alt='01 next'>"],
     responsive: {
       0: {
         items: 1
@@ -750,7 +750,7 @@
       // autoplay: true,
       autoplay: !1,
       autoplayTimeout: 2000,
-      navText: ["<img src='images/previmage.webp'>", "<img src='images/nextimage.webp'>"],
+      navText: ["<img src='images/previmage.webp' alt='prev'>", "<img src='images/nextimage.webp' alt='next'>"],
       smartSpeed: 400,
       responsive: {
         0: {
