--- a/index.html
+++ b/index.html
@@ -103,15 +103,101 @@
         </div>
         <div class="col-md-7 text-left">
           <h2 class="main-all-heading text-left">What is <br class="d-block d-md-none">Dr Batra’s® XOGEN <br>hair treatment?</h2>
-          <p class="mb-0">Application of exosomes on the scalp enriched with 1,470 growth factors</p>
           <ul class="xogen-list-para">
-            <li><img src="images/checklist-xogen.webp" alt="Xogen Chekclist" class="img-fluid" width="30" height="29" loading="lazy"> These exosomes travel to specific targeted areas </li>
-            <li><img src="images/checklist-xogen.webp" alt="Xogen Chekclist" class="img-fluid" width="30" height="29" loading="lazy"> They fix damaged follicles </li>
-            <li><img src="images/checklist-xogen.webp" alt="Xogen Chekclist" class="img-fluid" width="30" height="29" loading="lazy"> They get deeply absorbed into hair follicles </li>
-            <li><img src="images/checklist-xogen.webp" alt="Xogen Chekclist" class="img-fluid" width="30" height="29" loading="lazy"> Promoting new hair growth and repair </li>
+            <li><img src="images/checklist-xogen.webp" alt="Xogen Chekclist" class="img-fluid" width="30" height="29" loading="lazy"> XOGEN is the world’s most advanced exosome-based hair growth treatment </li>
+            <li><img src="images/checklist-xogen.webp" alt="Xogen Chekclist" class="img-fluid" width="30" height="29" loading="lazy"> Treats all kinds of hair loss, from hormonal to hereditary </li>
+            <li><img src="images/checklist-xogen.webp" alt="Xogen Chekclist" class="img-fluid" width="30" height="29" loading="lazy"> Exosome formulations targets damaged hair follicles directly </li>
+            <li><img src="images/checklist-xogen.webp" alt="Xogen Chekclist" class="img-fluid" width="30" height="29" loading="lazy"> Promotes blood flow and nutrient supply to hair follicles </li>
+            <li><img src="images/checklist-xogen.webp" alt="Xogen Chekclist" class="img-fluid" width="30" height="29" loading="lazy">
+              Uses power of 2 billion cells for safe, gentle and painless hair regeneration
+           </li> 
           </ul>
         </div>
       </div>
+    </div>
+  </section>
+  <section class="mt-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h2 class="main-all-heading mb-4"><u>H</u>ow dose <br class="d-block d-md-none">Dr Batra’s® XOGEN work? </h2> </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6 pt-4">
+          <div class="row align-items-center">
+            <div class="col-md-2 col-3"> <img src="images/key-icon-01.webp " alt="05 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
+            <div class="col-md-10 col-9">
+              <p class="key_heading_css">Application of exosomes on the scalp enriched with 1,470 growth factors</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 pt-4">
+          <div class="row align-items-center">
+            <div class="col-md-2 col-3"> <img src="images/key-icon-03.webp " alt="01 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
+            <div class="col-md-10 col-9">
+              <p class="key_heading_css">These exosomes travel to <br>specific targeted areas</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 pt-4">
+          <div class="row align-items-center">
+            <div class="col-md-2 col-3"> <img src="images/key-icon-02.webp " alt="02 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
+            <div class="col-md-10 col-9">
+              <p class="key_heading_css">They fix damaged follicles</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 pt-4">
+          <div class="row align-items-center">
+            <div class="col-md-2 col-3"> <img src="images/key-icon-04.webp " alt="03 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
+            <div class="col-md-10 col-9">
+              <p class="key_heading_css">They get deeply absorbed into<br class="d-none d-md-block">hair follicles</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 pt-4">
+          <div class="row align-items-center">
+            <div class="col-md-2 col-3"> <img src="images/key-icon-05.webp " alt="04 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
+            <div class="col-md-10 col-9">
+              <p class="key_heading_css">Promoting new hair growth and repair</p>
+            </div>
+          </div>
+        </div>
+      </div><!-- 
+      <div class="owl-carousel" id="key_action_slider">
+        <div class="col-md-12 pl-0 pr-0">
+          <div class="row align-items-center">
+            <div class="col-3 pb-2"> <img src="images/key-icon-03.webp " alt="001 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
+            <div class="col-9 pl-0">
+              <p class="key_heading_css">These exosomes travel to <br>specific targeted areas</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-12 pl-0 pr-0">
+          <div class="row align-items-center">
+            <div class="col-3 pb-2"> <img src="images/key-icon-02.webp " alt="002 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
+            <div class="col-9 pl-0">
+              <p class="key_heading_css">They fix damaged follicles</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-12 pl-0 pr-0">
+          <div class="row align-items-center">
+            <div class="col-3 pb-2"> <img src="images/key-icon-04.webp " alt="003 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
+            <div class="col-9 pl-0">
+              <p class="key_heading_css">They get deeply absorbed into hair follicles</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-12 pl-0 pr-0">
+          <div class="row align-items-center">
+            <div class="col-3 pb-2"> <img src="images/key-icon-05.webp " alt="004 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
+            <div class="col-9 pl-0">
+              <p class="key_heading_css">Promoting new hair growth and repair</p>
+            </div>
+          </div>
+        </div>
+      </div> -->
     </div>
   </section>
   <section class="mt-5">
