--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div class="col-md-6 pt-4">
           <div class="row align-items-center">
             <div class="col-md-2 col-3"> <img src="images/key-icon-01.webp " alt="05 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
-            <div class="col-md-10 col-9">
+            <div class="col-md-10 col-9 pl-0">
               <p class="key_heading_css">Application of exosomes on the scalp enriched with 1,470 growth factors</p>
             </div>
           </div>
@@ -134,7 +134,7 @@
         <div class="col-md-6 pt-4">
           <div class="row align-items-center">
             <div class="col-md-2 col-3"> <img src="images/key-icon-03.webp " alt="01 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
-            <div class="col-md-10 col-9">
+            <div class="col-md-10 col-9 pl-0">
               <p class="key_heading_css">These exosomes travel to <br>specific targeted areas</p>
             </div>
           </div>
@@ -142,7 +142,7 @@
         <div class="col-md-6 pt-4">
           <div class="row align-items-center">
             <div class="col-md-2 col-3"> <img src="images/key-icon-02.webp " alt="02 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
-            <div class="col-md-10 col-9">
+            <div class="col-md-10 col-9 pl-0">
               <p class="key_heading_css">They fix damaged follicles</p>
             </div>
           </div>
@@ -150,7 +150,7 @@
         <div class="col-md-6 pt-4">
           <div class="row align-items-center">
             <div class="col-md-2 col-3"> <img src="images/key-icon-04.webp " alt="03 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
-            <div class="col-md-10 col-9">
+            <div class="col-md-10 col-9 pl-0">
               <p class="key_heading_css">They get deeply absorbed into<br class="d-none d-md-block">hair follicles</p>
             </div>
           </div>
@@ -158,7 +158,7 @@
         <div class="col-md-6 pt-4">
           <div class="row align-items-center">
             <div class="col-md-2 col-3"> <img src="images/key-icon-05.webp " alt="04 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
-            <div class="col-md-10 col-9">
+            <div class="col-md-10 col-9 pl-0">
               <p class="key_heading_css">Promoting new hair growth and repair</p>
             </div>
           </div>
