--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <iframe title="xogen-video" src="https://player.vimeo.com/video/947354656?autoplay=1&loop=1&autopause=0&muted=1&byline=0&portrait=0&sidedock=0&controls=0" frameborder="0" allow="autoplay; fullscreen" allowfullscreen class="youtube-video"></iframe>
         </div>
         <div class="col-md-7 text-left">
-          <h2 class="main-all-heading text-left">What is <br class="d-block d-md-none">Dr Batra’s® XOGEN <br>hair treatment?</h2>
+          <h2 class="main-all-heading text-left"><u>W</u>hat is <br class="d-block d-md-none">Dr Batra’s® XOGEN <br>hair treatment?</h2>
           <ul class="xogen-list-para">
             <li><img src="images/checklist-xogen.webp" alt="Xogen Chekclist" class="img-fluid" width="30" height="29" loading="lazy"> XOGEN is the world’s most advanced exosome-based hair growth treatment </li>
             <li><img src="images/checklist-xogen.webp" alt="Xogen Chekclist" class="img-fluid" width="30" height="29" loading="lazy"> Treats all kinds of hair loss, from hormonal to hereditary </li>
