--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <div class="col-xl-4 col-lg-4 col-md-6 offset-xl-1 offset-md-0 pl-0 align-self-end order-md-first order-last pt-md-2 pt-0">
           <picture> <img src="images/banner-model.webp" class="img-fluid banner-img-cls" alt="banner-model"> </picture>
         </div>
-        <div class="col-xl-4 col-lg-4 col-md-6 col-12 align-self-center">
-          <div class="col-12 d-block d-md-none text-center pt-4 pb-2 pl-0"> 
+        <div class="col-xl-4 col-lg-4 col-md-6 col-12 align-self-center text-md-left text-center">
+          <div class="col-12 d-block d-md-none text-center pt-4 pb-2"> 
           <img src="images/db-logo-mob.webp" alt="DB Logo" class="img-fluid" width="120" height="58" loading="lazy"> </div>
           <div class="xogen_banner_content">
             <h2 class="Xogen_Sub_heding_banner">Introducing</h2>
@@ -123,41 +123,41 @@
           <h2 class="main-all-heading mb-4"><u>H</u>ow dose <br class="d-block d-md-none">Dr Batra’s® XOGEN work? </h2> </div>
       </div>
       <div class="row">
-        <div class="col-md-6 pt-4">
+        <div class="col-md-6 pt-md-4 pt-3">
           <div class="row align-items-center">
-            <div class="col-md-2 col-3"> <img src="images/key-icon-01.webp " alt="05 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
+            <div class="col-md-2 col-3 text-center"> <img src="images/key-icon-01.webp " alt="05 Key icon" class="img-fluid" width="60" height="60" loading="lazy"> </div>
             <div class="col-md-10 col-9 pl-0">
               <p class="key_heading_css">Application of exosomes on the scalp enriched with 1,470 growth factors</p>
             </div>
           </div>
         </div>
-        <div class="col-md-6 pt-4">
+        <div class="col-md-6 pt-md-4 pt-3">
           <div class="row align-items-center">
-            <div class="col-md-2 col-3"> <img src="images/key-icon-03.webp " alt="01 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
+            <div class="col-md-2 col-3 text-center"> <img src="images/key-icon-03.webp " alt="01 Key icon" class="img-fluid" width="60" height="60" loading="lazy"> </div>
             <div class="col-md-10 col-9 pl-0">
               <p class="key_heading_css">These exosomes travel to <br>specific targeted areas</p>
             </div>
           </div>
         </div>
-        <div class="col-md-6 pt-4">
+        <div class="col-md-6 pt-md-4 pt-3">
           <div class="row align-items-center">
-            <div class="col-md-2 col-3"> <img src="images/key-icon-02.webp " alt="02 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
+            <div class="col-md-2 col-3 text-center"> <img src="images/key-icon-02.webp " alt="02 Key icon" class="img-fluid" width="60" height="60" loading="lazy"> </div>
             <div class="col-md-10 col-9 pl-0">
               <p class="key_heading_css">They fix damaged follicles</p>
             </div>
           </div>
         </div>
-        <div class="col-md-6 pt-4">
+        <div class="col-md-6 pt-md-4 pt-3">
           <div class="row align-items-center">
-            <div class="col-md-2 col-3"> <img src="images/key-icon-04.webp " alt="03 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
+            <div class="col-md-2 col-3 text-center"> <img src="images/key-icon-04.webp " alt="03 Key icon" class="img-fluid" width="60" height="60" loading="lazy"> </div>
             <div class="col-md-10 col-9 pl-0">
               <p class="key_heading_css">They get deeply absorbed into<br class="d-none d-md-block">hair follicles</p>
             </div>
           </div>
         </div>
-        <div class="col-md-6 pt-4">
+        <div class="col-md-6 pt-md-4 pt-3">
           <div class="row align-items-center">
-            <div class="col-md-2 col-3"> <img src="images/key-icon-05.webp " alt="04 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
+            <div class="col-md-2 col-3 text-center"> <img src="images/key-icon-05.webp " alt="04 Key icon" class="img-fluid" width="60" height="60" loading="lazy"> </div>
             <div class="col-md-10 col-9 pl-0">
               <p class="key_heading_css">Promoting new hair growth and repair</p>
             </div>
