--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
           <div class="row align-items-center">
             <div class="col-md-2 col-3 text-center"> <img src="images/key-icon-04.webp " alt="03 Key icon" class="img-fluid" width="60" height="60" loading="lazy"> </div>
             <div class="col-md-10 col-9 pl-0">
-              <p class="key_heading_css">They get deeply absorbed into<br class="d-none d-md-block">hair follicles</p>
+              <p class="key_heading_css">They get deeply absorbed into <br class="d-none d-md-block">hair follicles</p>
             </div>
           </div>
         </div>
@@ -159,7 +159,7 @@
           <div class="row align-items-center">
             <div class="col-md-2 col-3 text-center"> <img src="images/key-icon-05.webp " alt="04 Key icon" class="img-fluid" width="60" height="60" loading="lazy"> </div>
             <div class="col-md-10 col-9 pl-0">
-              <p class="key_heading_css">Promoting new hair growth and repair</p>
+              <p class="key_heading_css">Promoting new hair growth <br class="d-block d-md-none"> and repair</p>
             </div>
           </div>
         </div>
