--- a/index.html
+++ b/index.html
@@ -20,20 +20,28 @@
     </div>
   </header>
   <section class="banner-section-cls">
-    <div class="container-fluid">
+    <div class="container-fluid xogen-ban-new-in-india">
       <div class="row align-items-end">
-        <div class="col-xl-4 col-lg-4 col-md-6 offset-xl-1 offset-md-0 pl-0 align-self-end order-md-first order-last pt-md-2 pt-0">
+        <div class="col-xl-5 col-lg-5 col-md-6 pl-md-5 pl-0 align-self-end order-md-first order-last pt-md-2 pt-0">
           <picture> <img src="images/banner-model.webp" class="img-fluid banner-img-cls" alt="banner-model"> </picture>
         </div>
-        <div class="col-xl-4 col-lg-4 col-md-6 col-12 align-self-center text-md-left text-center">
-          <div class="col-12 d-block d-md-none text-center pt-4 pb-2"> 
-          <img src="images/db-logo-mob.webp" alt="DB Logo" class="img-fluid" width="120" height="58" loading="lazy"> </div>
+        <div class="col-xl-4 col-lg-4 col-md-6 col-12 align-self-center">
+          <div class="col-12 d-block d-md-none text-center pt-4 pb-2"> <img src="images/db-logo-mob.webp" alt="DB Logo" class="img-fluid" width="120" height="" loading="lazy"> </div>
           <div class="xogen_banner_content">
             <h2 class="Xogen_Sub_heding_banner">Introducing</h2>
-            <img src="images/xogen-logo-big.webp" alt="logo big" class="img-fluid">
-            <h1 class="Xogen_heding_banner">World’s Best Treatment <br>For All Types of Hair Loss</h1>
+            <h1 class="Xogen_heding_banner">World’s Best Treatment <br>For All Types of Hair Loss</h1> <img src="images/xogen-logo-big.webp" alt="logo big" class="img-fluid">
+            <p class="Xogen_black_heding">Now in india</p>
+            <ul class="banner_list_xogen">
+              <li>Visible results in 3 months</li>
+              <li>Money-back guarantee*</li>
+            </ul>
           </div>
         </div>
+      </div>
+    </div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-12 blue-strip-offer-section pr-md-2 pr-0"> <small><sup>*</sup>T&C Apply</small> </div>
       </div>
     </div>
   </section>
@@ -72,11 +80,11 @@
       </div>
     </div>
   </section>
-  <section class="mt-5">
+  <section class="real_result_sec_pad">
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <h2 class="main-all-heading mb-4"><u>R</u>eal results</h2></div>
+          <h2 class="main-all-heading"><u>R</u>eal results</h2></div>
         <div class="col-lg-12">
           <div class="section-padding">
             <div class="screenshot_slider owl-carousel">
@@ -95,7 +103,7 @@
       </div>
     </div>
   </section>
-  <section class="mt-5">
+  <section class="vedio_section_pad">
     <div class="container">
       <div class="row align-items-center video_section_design">
         <div class="col-md-5">
@@ -116,14 +124,14 @@
       </div>
     </div>
   </section>
-  <section class="mt-5">
+  <section class="about_xogen_section_pad">
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <h2 class="main-all-heading mb-4"><u>H</u>ow dose <br class="d-block d-md-none">Dr Batra’s® XOGEN work? </h2> </div>
+          <h2 class="main-all-heading"><u>H</u>ow does <br class="d-block d-md-none">Dr Batra’s® XOGEN work? </h2> </div>
       </div>
       <div class="row">
-        <div class="col-md-6 pt-md-4 pt-3">
+        <div class="col-md-6 pt-md-3 pt-3">
           <div class="row align-items-center">
             <div class="col-md-2 col-3 text-center"> <img src="images/key-icon-01.webp " alt="05 Key icon" class="img-fluid" width="60" height="60" loading="lazy"> </div>
             <div class="col-md-10 col-9 pl-0">
@@ -131,7 +139,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6 pt-md-4 pt-3">
+        <div class="col-md-6 pt-md-3 pt-3">
           <div class="row align-items-center">
             <div class="col-md-2 col-3 text-center"> <img src="images/key-icon-03.webp " alt="01 Key icon" class="img-fluid" width="60" height="60" loading="lazy"> </div>
             <div class="col-md-10 col-9 pl-0">
@@ -139,7 +147,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6 pt-md-4 pt-3">
+        <div class="col-md-6 pt-md-3 pt-3">
           <div class="row align-items-center">
             <div class="col-md-2 col-3 text-center"> <img src="images/key-icon-02.webp " alt="02 Key icon" class="img-fluid" width="60" height="60" loading="lazy"> </div>
             <div class="col-md-10 col-9 pl-0">
@@ -147,7 +155,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6 pt-md-4 pt-3">
+        <div class="col-md-6 pt-md-3 pt-3">
           <div class="row align-items-center">
             <div class="col-md-2 col-3 text-center"> <img src="images/key-icon-04.webp " alt="03 Key icon" class="img-fluid" width="60" height="60" loading="lazy"> </div>
             <div class="col-md-10 col-9 pl-0">
@@ -155,7 +163,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-6 pt-md-4 pt-3">
+        <div class="col-md-6 pt-md-3 pt-3">
           <div class="row align-items-center">
             <div class="col-md-2 col-3 text-center"> <img src="images/key-icon-05.webp " alt="04 Key icon" class="img-fluid" width="60" height="60" loading="lazy"> </div>
             <div class="col-md-10 col-9 pl-0">
@@ -163,48 +171,14 @@
             </div>
           </div>
         </div>
-      </div><!-- 
-      <div class="owl-carousel" id="key_action_slider">
-        <div class="col-md-12 pl-0 pr-0">
-          <div class="row align-items-center">
-            <div class="col-3 pb-2"> <img src="images/key-icon-03.webp " alt="001 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
-            <div class="col-9 pl-0">
-              <p class="key_heading_css">These exosomes travel to <br>specific targeted areas</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-12 pl-0 pr-0">
-          <div class="row align-items-center">
-            <div class="col-3 pb-2"> <img src="images/key-icon-02.webp " alt="002 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
-            <div class="col-9 pl-0">
-              <p class="key_heading_css">They fix damaged follicles</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-12 pl-0 pr-0">
-          <div class="row align-items-center">
-            <div class="col-3 pb-2"> <img src="images/key-icon-04.webp " alt="003 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
-            <div class="col-9 pl-0">
-              <p class="key_heading_css">They get deeply absorbed into hair follicles</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-12 pl-0 pr-0">
-          <div class="row align-items-center">
-            <div class="col-3 pb-2"> <img src="images/key-icon-05.webp " alt="004 Key icon" class="img-fluid" width="70" height="70" loading="lazy"> </div>
-            <div class="col-9 pl-0">
-              <p class="key_heading_css">Promoting new hair growth and repair</p>
-            </div>
-          </div>
-        </div>
-      </div> -->
+      </div>
     </div>
   </section>
-  <section class="mt-5">
+  <section class="step_step_section_pad">
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <h2 class="main-all-heading mb-4"><u>A</u> step-by-step look at our treatment process</h2></div>
+          <h2 class="main-all-heading mb-3"><u>A</u> step-by-step look at our treatment process</h2></div>
         <div class="col-12">
           <div class="row Process_container_dekstop">
             <div class="col-md-4">
@@ -256,13 +230,12 @@
   </section>
 
 
- <section class="mt-5 pt-3">
+ <section class="range_slider_section_pad">
     <div class="container">
       <div class="row">
-        <div class="col-lg-12">
-          <div class="col-12">
-            <h2 class="main-all-heading mb-4"><u>O</u>ur wide range of international hair treatments</h2></div>
-          <div class="col-12">
+        <div class="col-12">
+            <h2 class="main-all-heading"><u>O</u>ur wide range of international hair treatments</h2></div>
+          <div class="col-12 ">
             <div class="row">
               <div class="owl-carousel" id="tratment_slider">
                 <div class="box-for-treatment-sec"> <img src="images/treat-ment-slider-01.webp" alt="treatment-model-01" class="img-fluid tratment-slider-img-wid" loading="lazy">
@@ -280,7 +253,7 @@
                     </ul>
                   </div>
                 </div>
-                <div class="box-for-treatment-sec"> <img src="images/treat-ment-slider-02.webp" alt="treatment-model-02" class="img-fluid tratment-slider-img-wid" loading="lazy">
+                <div class="box-for-treatment-sec "> <img src="images/treat-ment-slider-02.webp" alt="treatment-model-02" class="img-fluid tratment-slider-img-wid" loading="lazy">
                   <div class="ai-box-content align-self-center">
                     <h3 class="tratment-sub-heading">Scientific Transdermal Method</h3>
                     <p class="pt-2">State-of-the-art technology from France, scientific transdermal method uses Korean hair-growth solutions containing plant hair growth factors and multivitamins.</p>
@@ -326,16 +299,15 @@
               </div>
             </div>
           </div>
-        </div>
       </div>
     </div>
   </section>
 
-  <section class="mt-5">
+  <section class="google_rating_slider_pad">
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <h2 class="main-all-heading mb-4"><u>P</u>atients reviews</h2></div>
+          <h2 class="main-all-heading"><u>P</u>atients reviews</h2></div>
         <div class="col-lg-12">
           <!--  <div class="col-12" style="overflow: hidden; margin-left: -15px; margin-right:-15px;">
                 <div class="embedsocial-hashtag" style="margin-top: -50px;  margin-left: -10px; margin-right:-10px;" data-ref="d9aacf85238a85439dd962650a1b9669d71d52fa"></div> 
@@ -396,11 +368,11 @@
       </div>
     </div>
   </section>
- <section class="mt-5 mb-4">
+ <section class="faq_sec_pad">
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <h2 class="main-all-heading mb-4"><u>F</u>AQ<span>s</span></h2></div>
+          <h2 class="main-all-heading mb-2"><u>F</u>AQ<span>s</span></h2></div>
         <div class="col-12">
           <div class="accordion" id="accordionExample">
             <!-- Xogen que -->
