--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
       <div class="row align-items-center video_section_design">
         <div class="col-md-5">
           <!-- <iframe title="xogen-video" src="https://player.vimeo.com/video/947354656?autoplay=1&loop=1&autopause=0&muted=1&byline=0&portrait=0&sidedock=0&controls=0" frameborder="0" allow="autoplay; fullscreen" allowfullscreen class="youtube-video"></iframe> -->
-          <img src="images/vi-vimoe.webp" alt="video" class="img-fluid">
+          <img src="images/vi-vimoe-d.webp" alt="video" class="img-fluid d-none d-md-block">
+          <img src="images/vi-vimoe.webp" alt="video" class="img-fluid d-block d-md-none">
         </div>
         <div class="col-md-7 text-left mt-md-0 mt-3">
           <h2 class="main-all-heading text-left"><u>A</u>bout Dr Batra’s® XOGEN <br> treatment</h2>
