--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <div class="col-12 d-block d-md-none text-center pt-4 pb-2"> <img src="images/db-logo-mob.webp" alt="DB Logo" class="img-fluid" width="120" height="" loading="lazy"> </div>
           <div class="xogen_banner_content">
             <h2 class="Xogen_Sub_heding_banner">Introducing</h2>
-            <h1 class="Xogen_heding_banner">World’s Best Treatment <br>For All Types of Hair Loss</h1> <img src="images/xogen-logo-big.webp" alt="logo big" class="img-fluid">
+            <h1 class="Xogen_heding_banner">World’s Best Treatment <br>for All Types of Hair Loss</h1> <img src="images/xogen-logo-big.webp" alt="logo big" class="img-fluid">
             <p class="Xogen_black_heding">Now in india</p>
             <ul class="banner_list_xogen">
               <li>Visible results in 3 months</li>
