--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <div class="col-md-6 align-self-center key_icon_box">
           
            <p><img src="images/key-icon-01.webp " alt="05 Key icon" class="img-fluid" width="60" height="60" loading="lazy"> 
-           <span>Application of exosomes on the scalp enriched with 1,470 growth factors - Stays as it is</span>
+           <span>Application of exosomes on the scalp enriched with 1,470 growth factors </span>
            </p>
         </div>
 
