--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           
            <p><img src="images/key-icon-01.webp " alt="05 Key icon" class="img-fluid" width="60" height="60" loading="lazy">
 
-           <span><b>Release of exosome:</b> Initiate the process by releasing growth factors onto the scalp</span>
+           <span><b>Release of exosome:</b> Apply growth factors to the scalp</span>
            </p>
         </div>
 
@@ -170,7 +170,7 @@
         <div class="col-md-6 align-self-center key_icon_box">
          
            <p>  <img src="images/key-icon-05.webp " alt="01 Key icon" class="img-fluid" width="60" height="60" loading="lazy">
-           <span><b>Repair & Healing:</b> They deliver essential nutrients, promoting repair and growth</span>
+           <span><b>Repair & Healing:</b> They deliver essential nutrients, promoting repair & growth</span>
            </p>
         </div>
 
