--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <div class="col-md-6 align-self-center key_icon_box">
          
            <p>  <img src="images/key-icon-05.webp " alt="01 Key icon" class="img-fluid" width="60" height="60" loading="lazy">
-           <span><b>Repair & Healing:</b> They deliver nutrients, promoting repair an growth</span>
+           <span><b>Repair & Healing:</b> They deliver nutrients, promoting repair and growth</span>
            </p>
         </div>
 
