--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
         <div class="form-top-new">
           <form>
-            <p class="text-uppercase text-center form_head_text pt-2">Request a Call Back</p>
+            <p class="text-uppercase text-center form_head_text pt-2 pb-3">Request a Call Back</p>
             <div class="col-12 pl-0 pr-0">
               <div class="row form-group">
                 <div class="col-12 pb-3">
@@ -61,7 +61,7 @@
                   <input class="form-control bg-transparent" placeholder="Enter full name" name="name" id="Name"> </div>
                 <div class="col-12 pb-3">
                   <label for="name">Mobile Number*</label>
-                  <input type="tel" class="form-control bg-transparent" placeholder="Enter 9 digit mobile number" name="mobile" id="mobile"> </div>
+                  <input type="tel" class="form-control bg-transparent" placeholder="Enter 10 digit mobile number" name="mobile" id="mobile"> </div>
                 <div class="col-12">
                   <label for="name">Email ID</label>
                   <input type="tel" class="form-control bg-transparent" placeholder="Enter Email ID" name="mobile" id="mobile"> </div>
@@ -80,29 +80,7 @@
       </div>
     </div>
   </section>
-  <section class="real_result_sec_pad">
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <h2 class="main-all-heading"><u>R</u>eal results</h2></div>
-        <div class="col-lg-12">
-          <div class="section-padding">
-            <div class="screenshot_slider owl-carousel">
-              <div class="item"><img src="images/01-before-after.webp" alt="01 Before After" class="img-fluid" width="442" height="255" loading="lazy"></div>
-              <div class="item"><img src="images/02-before-after.webp" alt="02 Before After" class="img-fluid" width="442" height="255" loading="lazy"></div>
-              <div class="item"><img src="images/03-before-after.webp" alt="03 Before After" class="img-fluid" width="442" height="255" loading="lazy"></div>
-              <div class="item"><img src="images/04-before-after.webp" alt="04 Before After" class="img-fluid" width="442" height="255" loading="lazy"></div>
-              <div class="item"><img src="images/05-before-after.webp" alt="05 Before After" class="img-fluid" width="442" height="255" loading="lazy"></div>
-              <div class="item"><img src="images/06-before-after.webp" alt="06 Before After" class="img-fluid" width="442" height="255" loading="lazy"></div>
-              <div class="item"><img src="images/07-before-after.webp" alt="07 Before After" class="img-fluid" width="442" height="255" loading="lazy"></div>
-              <div class="item"><img src="images/08-before-after.webp" alt="08 Before After" class="img-fluid" width="442" height="255" loading="lazy"></div>
-              <div class="item"><img src="images/09-before-after.webp" alt="09 Before After" class="img-fluid" width="442" height="255" loading="lazy"></div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+ 
   <section class="vedio_section_pad">
     <div class="container">
       <div class="row align-items-center video_section_design">
@@ -310,6 +288,30 @@
     </div>
   </section>
  -->
+
+  <section class="real_result_sec_pad">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h2 class="main-all-heading"><u>R</u>eal results</h2></div>
+        <div class="col-lg-12">
+          <div class="section-padding">
+            <div class="screenshot_slider owl-carousel">
+              <div class="item"><img src="images/01-before-after.webp" alt="01 Before After" class="img-fluid" width="442" height="255" loading="lazy"></div>
+              <div class="item"><img src="images/02-before-after.webp" alt="02 Before After" class="img-fluid" width="442" height="255" loading="lazy"></div>
+              <div class="item"><img src="images/03-before-after.webp" alt="03 Before After" class="img-fluid" width="442" height="255" loading="lazy"></div>
+              <div class="item"><img src="images/04-before-after.webp" alt="04 Before After" class="img-fluid" width="442" height="255" loading="lazy"></div>
+              <div class="item"><img src="images/05-before-after.webp" alt="05 Before After" class="img-fluid" width="442" height="255" loading="lazy"></div>
+              <div class="item"><img src="images/06-before-after.webp" alt="06 Before After" class="img-fluid" width="442" height="255" loading="lazy"></div>
+              <div class="item"><img src="images/07-before-after.webp" alt="07 Before After" class="img-fluid" width="442" height="255" loading="lazy"></div>
+              <div class="item"><img src="images/08-before-after.webp" alt="08 Before After" class="img-fluid" width="442" height="255" loading="lazy"></div>
+              <div class="item"><img src="images/09-before-after.webp" alt="09 Before After" class="img-fluid" width="442" height="255" loading="lazy"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <section class="google_rating_slider_pad">
     <div class="container">
       <div class="row">
@@ -387,7 +389,7 @@
               <div id="headingOne">
                 <h2 class="panel-title"><a href="javascript:void(0);" class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne_xogen" aria-expanded="true" aria-controls="collapseOne_xogen">What is Dr Batra’s® XOGEN <br class="d-block d-md-none">hair treatment?</a></h2></div>
               <div id="collapseOne_xogen" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
-                <div class="panel-body para-faq">Dr Batra’s<sup>®</sup> XOGEN is an exosome-based targeted hair regeneration treatment that stimulates hair growth at the follicle level and gives faster and visible results. Exosomes are body cell components that contain 1,470  growth factors, coenzymes, proteins, and genetic material that stimulate cellular repair and regeneration. They also promote hair regrowth, enhance hair quality, and improves scalp health. Unlike traditional treatments, XOGEN treats all kinds of hair loss, even the hereditary hair loss. </div>
+                <div class="panel-body para-faq">Dr Batra’s<sup>®</sup> XOGEN is an exosome-based targeted hair regeneration treatment that stimulates hair growth at the follicle level and gives faster and visible results. Exosomes are body cell components that contain 1,470  growth factors, coenzymes, proteins and genetic material that stimulate cellular repair and regeneration. They also promote hair regrowth, enhance hair quality, and improves scalp health. Unlike traditional treatments, XOGEN treats all kinds of hair loss, even the hereditary hair loss. </div>
               </div>
             </div>
             <div class="faq-box-cls">
@@ -401,7 +403,7 @@
               <div id="headingOne">
                 <h2 class="panel-title"><a href="javascript:void(0);" class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseThree_xogen" aria-expanded="true" aria-controls="collapseThree_xogen">How does exosome-based hair <br class="d-block d-md-none">treatment work?</a></h2></div>
               <div id="collapseThree_xogen" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-                <div class="panel-body para-faq">During the treatment, exosomes are carefully released into the scalp through a non-surgical procedure. After the exosomes are released, they penetrate the skin and reach the targeted areas, where they start their action to latch onto damaged hair cells. Later, they get absorbed into the hair follicles and release the growth factors and essential nutrients and  promote regeneration and regrowth . In addition to promoting hair growth, they increase blood circulation in the scalp and reduce inflammation.</div>
+                <div class="panel-body para-faq">During the treatment, exosomes are carefully released into the scalp through a <br class="d-block d-md-none">non-surgical procedure. After the exosomes are released, they penetrate the skin and reach the targeted areas, where they start their action to latch onto damaged hair cells. Later, they get absorbed into the hair follicles and release the growth factors and essential nutrients and  promote regeneration and regrowth. In addition to promoting hair growth, they increase blood circulation in the scalp and reduce inflammation.</div>
               </div>
             </div>
             <div class="faq-box-cls">
@@ -424,14 +426,14 @@
               <div id="headingOne">
                 <h2 class="panel-title"><a href="javascript:void(0);" class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">What is the best hair <br class="d-block d-md-none">loss treatment?</a></h2></div>
               <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-                <div class="panel-body para-faq">Hair loss treatment varies depending on individual factors such as the underlying cause, genetics, and lifestyle. There are several effective options, including medications and lifestyle changes, but they may have major side effects. It is advisable to consider the treatments that targets root cause and are a combination of holistic and aesthetic hair treatments.</div>
+                <div class="panel-body para-faq">Hair loss treatment varies depending on individual factors such as the underlying cause, genetics and lifestyle. There are several effective options, including medications and lifestyle changes, but they may have major side effects. It is advisable to consider the treatments that targets root cause and are a combination of holistic and aesthetic hair treatments.</div>
               </div>
             </div>
             <div class="faq-box-cls">
               <div id="headingOne">
                 <h2 class="panel-title"><a href="javascript:void(0);" class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">How to stop hair fall immediately?</a></h2></div>
               <div id="collapseTwo" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-                <div class="panel-body para-faq">Stopping hair fall immediately is challenging. Knowing the root cause of hair loss, managing stress, eating well, and adopting good hair care habits can gradually reduce hair fall in the long term. With a unique approach to hair loss treatment, we at Dr Batra’s<sup>®</sup> combine the gentle power of homeopathy with advanced international hair treatments.</div>
+                <div class="panel-body para-faq">Stopping hair fall immediately is challenging. Knowing the root cause of hair loss, managing stress, eating well, and adopting good hair care habits can gradually reduce hair fall in the long term. With a unique approach to hair loss treatment, we at Dr&nbsp;Batra’s<sup>®</sup> combine the gentle power of homeopathy with advanced international hair treatments.</div>
               </div>
             </div>
             <div class="faq-box-cls">
@@ -445,14 +447,14 @@
               <div id="headingOne">
                 <h2 class="panel-title"><a href="javascript:void(0);" class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="true" aria-controls="collapseFour">Why is my hair falling so much?</a></h2></div>
               <div id="collapseFour" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-                <div class="panel-body para-faq">Hair loss can have various reasons, including genetics, hormonal changes, stress, and certain underlying medical conditions. If you're experiencing significant hair loss, it's best to consult a hair specialist near you for treatment options. Following an in-depth consultation with our Hair Specialists, a personalized hair fall treatment is crafted to address your specific needs, ensuring tailored care and effective results at Dr Batra's<sup>®</sup>.</div>
+                <div class="panel-body para-faq">Hair loss can have various reasons, including genetics, hormonal changes, stress, and certain underlying medical conditions. If you're experiencing significant hair loss, it's best to consult a hair specialist near you for treatment options. Following an in-depth consultation with our Hair Specialists, a personalized hair fall treatment is crafted to address your specific needs, ensuring tailored care and effective results at Dr&nbsp;Batra's<sup>®</sup>.</div>
               </div>
             </div>
             <div class="faq-box-cls">
               <div id="headingOne">
                 <h2 class="panel-title"><a href="javascript:void(0);" class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="true" aria-controls="collapseFive">Which treatment is best for <br class="d-block d-md-none">hair fall control?</a></h2></div>
               <div id="collapseFive" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-                <div class="panel-body para-faq">When it comes to controlling hair fall, Dr Batra's<sup>®</sup> offers personalized treatments tailored to your needs. With a success rate of 96.6% and over 1.5 million happy patients, we specialize in holistic hair regrowth treatments, including homeopathy and advanced aesthetic treatments. Visit our clinic to find the most suitable hair treatment recommended by our specialists.</div>
+                <div class="panel-body para-faq">When it comes to controlling hair fall, Dr&nbsp;Batra's<sup>®</sup> offers personalized treatments tailored to your needs. With a success rate of 96.6% and over 1.5 million happy patients, we specialize in holistic hair regrowth treatments, including homeopathy and advanced aesthetic treatments. Visit our clinic to find the most suitable hair treatment recommended by our specialists.</div>
               </div>
             </div>
             <!-- old que -->
